--- a/index.css
+++ b/index.css
@@ -1,10 +1,14 @@
 header {
     background-color: black;
-    width: 101.5%;
-    margin-left:-0.5rem;
+    /* width: 101.5%; */
+    /* margin-left:-0.5rem;
     margin-top: -0.5rem;
     padding-bottom: 1.5rem;
-    padding-top: 1.5rem;
+    padding-top: 1.5rem; */
+    margin-left:-15px;
+    margin-top: -15px;
+    padding-bottom: 15px;
+    padding-top: 15px;
     color: white;
 }
 body {
@@ -16,16 +20,19 @@ header, body {
     font-family: 'Work Sans', sans-serif;
 } 
 .title-text{
-    font-size: 4rem;
-    padding-top: -2.5rem;
+    font-size:6vw;
+    /* padding-top: -2.5rem; */
+    padding-top: -30px;
 }
 .heart {
-    max-width: 2rem;
+    /* max-width: 2rem; */
+    max-width: 30px;
 }
 .project {
     background-color: white;
     width: 70%;
-    margin-top: -1.5rem !important;
+    /* margin-top: -1.5rem !important; */
+    margin-top: -15px !important;
     margin: 0 auto;
     align-items: center;
     border-radius: 0.5%;
@@ -33,7 +40,8 @@ header, body {
 .schedule-bullet{
     display: flex;
     flex-wrap: wrap;
-    font-size: 2rem;
+    /* font-size: 2rem; */
+    font-size: 30px;
     font-weight: 100 !important;
     font-style: italic;
     font-family: 'Work Sans', sans-serif;
@@ -42,25 +50,29 @@ header, body {
 }
 .schedule-timetable-wrapper{
     flex-wrap: nowrap;
-    font-size: 2rem;
+    /* font-size: 2rem; */
+    font-size: 30px;
     font-style: normal;
     font-weight: bold !important;
     font-family: 'Work Sans', sans-serif;
 }
 .schedule-timetable{
-    margin-top: 1.5rem;
+    /* margin-top: 1.5rem; */
+    margin-top: 1.5px;
 }
 .schedule-description{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    font-size: 2rem;
+    /* font-size: 2rem; */
+    font-size: 30px;
     font-weight: 100 !important;
     font-style: normal;
     font-family: 'Work Sans', sans-serif;
     color: black;
-    margin: 0 11rem;
+    /* margin: 0 11rem; */
+    margin: 0 100px;
 }
 .name-place {
     display: flex;
@@ -70,12 +82,13 @@ header, body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-left: 1rem;
+    margin-left: 10px;
 }
 .website {
     max-width: 30px;
     height: 30px;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
+    margin-top: 10px;
     filter:opacity(0.3)
 }
 .map{
@@ -89,30 +102,133 @@ a :hover {
 
 }
 .photo {
-    margin: 0 11rem;
+    /* margin: 0 11rem; */
+    margin: 0 100px;
 }
 .photo-cafe {
     border-radius: 5%;
-    max-width: 100%;
-    min-width: 295px;
+    width: 100%;
+    /* min-width: 295px; */
     justify-content: center;
 }
 .photo-kalian {
     border-radius: 5%;
-    max-width: 100%;
-    min-width: 295px;
+    width: 100%;
+    /* min-width: 295px; */
     justify-content: center;
 }
 .photo-karaoke{
     border-radius: 5%;
-    max-width: 100%;
-    min-width: 295px;
+    width: 100%;
+    /* min-width: 295px; */
     justify-content: center;
 }
 .photo-defaqto{
     border-radius: 5%;
-    width: 1000px;
-    max-width: 100%;
-    min-width: 295px;
+    width: 100%;
+    /* min-width: 295px; */
     justify-content: center;
 }
+  @media (max-width: 767px) {
+    .photo {   
+        flex: 100%;
+        max-width: 100%;
+        flex-direction: column;
+        min-width: 405px;
+      }
+      .project {   
+        width: 102%;
+        margin: -8px;
+        border-radius: 0;
+    }
+    .schedule-timetable, .schedule-description {   
+        font-size:4vw;
+    }
+    .map {
+        max-width: 30px;
+        height: auto;
+        margin-top: 5px;
+        filter: opacity(0.3);
+    }
+    .website {
+        max-width: 20px;
+        height: 20px;
+        margin-top: 10px;
+        filter: opacity(0.3);
+    }
+  }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .project{   
+        width: 102%;
+        margin: -8px;
+        border-radius: 0;
+    }
+    .schedule-timetable, .schedule-description {   
+        font-size:4.3vw;
+    }
+    .map {
+        max-width: 40px;
+        height: auto;
+        margin-top: 8px;
+        filter: opacity(0.3);
+    }
+    .website {
+        max-width: 30px;
+        height: 30px;
+        margin-top: 13px;
+        filter: opacity(0.3);
+    }
+  }
+  @media (min-width: 991px) and (max-width: 1199px) {
+    .project{   
+        width: 76%;
+        /* margin: -8px; */
+        border-radius: 0;
+    }
+    .schedule-timetable, .schedule-description {   
+        font-size:40px;
+    }
+    .map {
+        max-width: 40px;
+        height: auto;
+        margin-top: 10px;
+        filter: opacity(0.3);
+    }
+    .website {
+        max-width: 30px;
+        height: 30px;
+        margin-top: 15px;
+        filter: opacity(0.3);
+    }
+  }
+  @media (min-width: 1200px) {
+    .photo {   
+        flex: 100%;
+        flex-direction: column;
+        width: 890px;
+        /* min-width: 405px; */
+      }
+      .project{   
+        width: 76%;
+        /* margin: -8px; */
+        border-radius: 0;
+    }
+    .schedule-timetable, .schedule-description {   
+        font-size:45px;
+    }
+    .title-text {
+        font-size: 70px
+    }
+    .map {
+        max-width: 45px;
+        height: auto;
+        margin-top: 10px;
+        filter: opacity(0.3);
+    }
+    .website {
+        max-width: 35px;
+        height: 35px;
+        margin-top: 15px;
+        filter: opacity(0.3);
+    }
+  }
