--- a/index.css
+++ b/index.css
@@ -129,6 +129,34 @@ a :hover {
     /* min-width: 295px; */
     justify-content: center;
 }
+@media (min-width: 421px) {
+    .photo {   
+        flex: 100%;
+        max-width: 100%;
+        flex-direction: column;
+        min-width: 405px;
+      }
+      .project {   
+        width: 102%;
+        margin: -8px;
+        border-radius: 0;
+    }
+    .schedule-timetable, .schedule-description {   
+        font-size:4vw;
+    }
+    .map {
+        max-width: 30px;
+        height: auto;
+        margin-top: 5px;
+        filter: opacity(0.3);
+    }
+    .website {
+        max-width: 20px;
+        height: 20px;
+        margin-top: 10px;
+        filter: opacity(0.3);
+    }
+  }
   @media (max-width: 767px) {
     .photo {   
         flex: 100%;
