--- a/index.css
+++ b/index.css
@@ -209,7 +209,7 @@ a :hover {
   }
   @media (min-width: 991px) and (max-width: 1199px) {
     .project{   
-        width: 76%;
+        width: 100%;
         /* margin: -8px; */
         border-radius: 0;
     }
@@ -238,7 +238,7 @@ a :hover {
       }
       .project{   
         width: 76%;
-        /* margin: -8px; */
+        margin-left: 11%;
         border-radius: 0;
     }
     .schedule-timetable, .schedule-description {   
