--- a/index.css
+++ b/index.css
@@ -14,7 +14,9 @@ header {
 body {
     background-color: #F7F7F7;
     color: black;
+    margin: 0 0;
     width: 100%;
+    position: fixed;
 }
 header, body {
     text-align: center;
@@ -130,7 +132,7 @@ a :hover {
     /* min-width: 295px; */
     justify-content: center;
 }
-  @media (max-width: 767px) {
+  @media (min-width: 50px) {
     .photo {   
         flex: 100%;
         max-width: 100%;
@@ -138,8 +140,8 @@ a :hover {
         min-width: 405px;
       }
       .project {   
-        width: 102%;
-        margin: -8px;
+        width: 100%;
+        /* margin: -8px; */
         border-radius: 0;
     }
     .schedule-timetable, .schedule-description {   
@@ -160,8 +162,8 @@ a :hover {
   }
   @media (min-width: 768px) and (max-width: 991px) {
     .project{   
-        width: 102%;
-        margin: -8px;
+        width: 1020%;
+        /* margin: -8px; */
         border-radius: 0;
     }
     .schedule-timetable, .schedule-description {   
@@ -206,7 +208,7 @@ a :hover {
     .photo {   
         flex: 100%;
         flex-direction: column;
-        width: 890px;
+        /* width: 890px; */
         /* min-width: 405px; */
       }
       .project{   
