--- a/index.css
+++ b/index.css
@@ -94,31 +94,31 @@ a :hover {
     filter:opacity(0.67); 
 
 }
-/* .photo {
-    margin: 0 11rem;
-} */
+.photo {
+    margin: 0 40px;
+}
 .photo-cafe {
     border-radius: 5%;
     width: 100%;
-    min-width: 295px;
+    /* min-width: 295px; */
     justify-content: center;
 }
 .photo-kalian {
     border-radius: 5%;
     width: 100%;
-    min-width: 295px;
+    /* min-width: 295px; */
     justify-content: center;
 }
 .photo-karaoke{
     border-radius: 5%;
     width: 100%;
-    min-width: 295px;
+    /* min-width: 295px; */
     justify-content: center;
 }
 .photo-defaqto{
     border-radius: 5%;
     width: 100%;
-    min-width: 295px;
+    /* min-width: 295px; */
     justify-content: center;
 }
   @media (max-width: 768px) {
