--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@ header, body {
 .project {
     background-color: white;
     width: 70%;
-    /* margin-top: -1.5rem !important; */
-    margin-top: -15px !important;
+    /* margin-top: -1.5rem*/
+    margin-top: -15px; 
     margin: 0 auto;
     align-items: center;
     border-radius: 0.5%;
@@ -36,7 +36,7 @@ header, body {
     flex-wrap: wrap;
     /* font-size: 2rem; */
     font-size: 30px;
-    font-weight: 100 !important;
+    font-weight: 100;
     font-style: italic;
     font-family: 'Work Sans', sans-serif;
     justify-content: center;
@@ -47,7 +47,8 @@ header, body {
     /* font-size: 2rem; */
     font-size: 30px;
     font-style: normal;
-    font-weight: bold !important;
+    font-weight: bold;
+    width: 100%;
     font-family: 'Work Sans', sans-serif;
 }
 .schedule-timetable{
@@ -61,7 +62,7 @@ header, body {
     flex-wrap: wrap;
     /* font-size: 2rem; */
     font-size: 30px;
-    font-weight: 100 !important;
+    font-weight: 100;
     font-style: normal;
     font-family: 'Work Sans', sans-serif;
     color: black;
@@ -75,7 +76,7 @@ header, body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-left: 10px;
+    width: 100%;
 }
 .website {
     max-width: 30px;
@@ -94,12 +95,23 @@ a :hover {
     filter:opacity(0.67); 
 
 }
+.information-block {
+    display: flex;
+    flex-wrap: nowrap;
+    font-size: 1rem;
+}
+.information-description {
+    display: flex;
+    flex-wrap:wrap;
+}
 .photo {
-    margin: 0 40px;
+    flex: 100%;
+    flex-direction: column;
+    /* margin: 0 40px; */
 }
 .photo-cafe {
     border-radius: 5%;
-    width: 100%;
+   width: 100%;
     /* min-width: 295px; */
     justify-content: center;
 }
@@ -121,13 +133,76 @@ a :hover {
     /* min-width: 295px; */
     justify-content: center;
 }
-  @media (max-width: 768px) {
+.icon-container {
+    margin: 0px -35px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.icon {
+    background-color: none;
+}
+.price-tag {
+    width: 20%;
+}
+.price-tag1 {
+    width: 100%;
+}
+.variety, .variety1 {
+    width: 28%;
+}
+/* .description-container {
+    margin-right: 20px;
+    width: 21rem;
+} */
+.line-description-container1 {
+    margin-left: -40px;
+    margin-top: -105px;
+}
+.line-description-container {
+    flex-wrap: nowrap;
+    display: flex;
+}
+.website1 .website1text {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    margin-left: -170px;  
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 0;
+}
+.map1 .map1text {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    margin-left: -40px;
+  
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 3;
+}
+.website1:hover .website1text {
+    visibility: visible;
+}
+.map1:hover .map1text {
+    visibility: visible;
+}
+@media screen and (min-width:280px) and (max-width:360px) {
     .photo {   
         flex: 100%;
         max-width: 100%;
         flex-direction: column;
       }
-      .project {   
+      .project {  
+        flex: 100%; 
         width: 100%;
         /* margin: -8px; */
         border-radius: 0;
@@ -136,19 +211,103 @@ a :hover {
         font-size:4vw;
     }
     .map {
-        max-width: 30px;
+        max-width: 40px;
         height: auto;
         margin-top: 5px;
         filter: opacity(0.3);
     }
     .website {
-        max-width: 20px;
-        height: 20px;
+        max-width: 30px;
+        height: 30px;
         margin-top: 10px;
         filter: opacity(0.3);
     }
+    .information-block {
+        flex-wrap: wrap;
+    }
+    .information-description {
+        flex: 100%;
+        width: 100%;
+    }
+    /* .line-description-container {
+        margin: 0 2rem;
+    } */
+    .price-tag {
+        position: relative;
+        width: 15%;
+    }
+    .variety {
+        position: relative;
+        margin-top: 120px;
+    }
+    .description-container {
+        font-size: 1.2vw;
+        width:100%;
+    }
+    .main-text {
+        margin-top: 3%;
+    }
+    .sub-text {
+        margin-top: -1%;
+    }
   }
-  @media (min-width: 768px) and (max-width: 991px) {
+@media screen and (min-width:360px) and (max-width:767px) {
+    .photo {   
+        flex: 100%;
+        max-width: 100%;
+        flex-direction: column;
+      }
+      .project {  
+        flex: 100%; 
+        width: 100%;
+        /* margin: -8px; */
+        border-radius: 0;
+    }
+    .schedule-timetable, .schedule-description {   
+        font-size:4vw;
+    }
+    .map {
+        max-width: 40px;
+        height: auto;
+        margin-top: 5px;
+        filter: opacity(0.3);
+    }
+    .website {
+        max-width: 30px;
+        height: 30px;
+        margin-top: 10px;
+        filter: opacity(0.3);
+    }
+    .information-block {
+        flex-wrap: wrap;
+    }
+    .information-description {
+        flex: 100%;
+        width: 100%;
+    }
+    /* .line-description-container {
+        margin: 0 2rem;
+    } */
+    .price-tag {
+        position: relative;
+        width: 15%;
+    }
+    .variety {
+        position: relative;
+        margin-top: 120px;
+    }
+    .description-container {
+        font-size: 2.2vw;
+        width:100%;
+    }
+    .main-text {
+        margin-top: 3%;
+    }
+    .sub-text {
+        margin-top: -1%;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 991px) {
     .photo {   
         flex: 100%;
         max-width: 100%;
@@ -174,12 +333,29 @@ a :hover {
         margin-top: 13px;
         filter: opacity(0.3);
     }
+    .information-block {
+        flex-wrap: wrap;
+    }
+    .information-description {
+        width: 100%;
+    }
+    .description-container {
+        font-size: 2.2vw;
+        width:100%;
+    }
+    .main-text {
+        margin-top: 3%;
+    }
+    .sub-text {
+        margin-top: -1%;
+    }
   }
-  @media (min-width: 991px) and (max-width: 1199px) {
+  @media screen and (min-width: 991px) and (max-width: 1199px) {
     .photo {   
         flex: 100%;
         max-width: 100%;
         flex-direction: column;
+        /* margin-left: 5rem; */
       }
     .project{   
         width: 76%;
@@ -201,12 +377,25 @@ a :hover {
         margin-top: 15px;
         filter: opacity(0.3);
     }
+    .information-description {
+        width: 100%;
+    }
+    .description-container {
+        font-size: 1.2vw;
+        width:100%;
+    }
+    .main-text {
+        margin-top: 3%;
+    }
+    .sub-text {
+        margin-top: -1%;
+    }
   }
-  @media (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     .photo {   
         flex: 100%;
         flex-direction: column;
-        width: 890px;
+        /* margin-left: 5rem; */
       }
       .project{   
         width: 76%;
@@ -220,15 +409,28 @@ a :hover {
         font-size: 70px
     }
     .map {
-        max-width: 45px;
+        max-width: 100px;
         height: auto;
-        margin-top: 10px;
+        margin-top: 0px;
         filter: opacity(0.3);
     }
     .website {
-        max-width: 35px;
-        height: 35px;
-        margin-top: 15px;
+        max-width: 75px;
+        height: 75px;
+        margin-top: 13px;
         filter: opacity(0.3);
+    }
+    .information-description {
+        width: 100%;
+    }
+    .description-container {
+        font-size: 1.2vw;
+        width:100%;
+    }
+    .main-text {
+        margin-top: 3%;
+    }
+    .sub-text {
+        margin-top: -2%;
     }
   }
