--- a/index.css
+++ b/index.css
@@ -362,7 +362,7 @@ a :hover {
         margin-top: 120px;
     }
     .description-container {
-        font-size: 1.2vw;
+        font-size: 3vw;
         width:100%;
     }
     .line-description-container {
@@ -372,20 +372,21 @@ a :hover {
         margin-top: 3%;
         margin-left: -10%;
     }
-    .main-text1 {
+    /* .main-text1 {
         margin-left: -17%;
-    }
+    } */
     .main-text2 {
         margin-top: -1%;
+        font-size: 2.5vw;
     }
     .sub-text {
         margin-top: -1%;
         margin-left: -8%;
 }
     .sub-text1 {
-        margin-left: -5%;
+        /* margin-left: -5%; */
         font-style: italic; 
-        font-size: 1.5vw;
+        font-size: 2.5vw;
     }
     .sub-text4 {
         margin-top: 5%;
@@ -452,27 +453,28 @@ a :hover {
         width: 100%;
     }
     .description-container {
-        font-size: 2.2vw;
+        font-size: 3vw;
         width:100%;
     }
     .main-text {
         margin-top: 3%;
         margin-left: -11%;
     }
-    .main-text1 {
+    /* .main-text1 {
         margin-left: -17%;
-    }
+    } */
     .main-text2 {
         margin-top: -1%;
+        font-size: 2.5vw;
     }
     .sub-text {
         margin-top: -1%;
         margin-left: -10%;
     }
     .sub-text1 {
-        margin-left: -15%;
+        /* margin-left: -15%; */
         font-style: italic; 
-        font-size: 2vw;
+        font-size: 2.5vw;
         font-weight: normal;
     }
     .sub-text2{
